# pocket_vgm

./: .gitignore  README.md
.github/workflows/: build.yml
Demo/: README.md
Demo/Computer/: Greensleeves (m4pocket demo).sid
Demo/Nintendo/: Korobeiniki (m4pocket demo).nsf  Ode to Joy (m4pocket demo).gbs
Demo/Sega/: Bicycle Games (Safety Stoat, CC0).gym  Mad Bossa (Safety Stoat, CC0).vgz
core/.cargo/: config.toml
core/lang/rust/: Cargo.toml
core/lang/rust/examples/player/: Cargo.toml
core/lang/rust/examples/player/src/: files.rs  font.rs  main.rs  ui.rs
core/lang/rust/examples/rough_fps/: riscv32imafdc-unknown-none-elf.json
core/pkg/pocket/Cores/M4chanic.PocketVGM/: core.json  data.json  info.txt
core/projects/: openFPGA-RISC-V_pocket.qsf
docs/: chips.md
firmware/midi-core/: Cargo.toml
firmware/midi-core/examples/: mid2cmds.rs
firmware/midi-core/src/: lib.rs
firmware/vgm-core/: Cargo.toml
firmware/vgm-core/src/: lib.rs  md5.rs
rtl/chipbox/: gbsbox.sv  msm6258.sv  savestate_stub.sv  vrc6.sv
scripts/: m4pocket_update.py  make_artwork.py  pocketvgm_update.py  reverse_bits.py  vgm2gym.py
scripts/demo_tunes/: asm6502.py  make_gbs.py  make_nsf.py  make_sid.py
sim/chipbox_tb/: Makefile  main.cpp
sim/sid_tb/: main.cpp
sim/vgmplay/: Makefile  main.cpp
