[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
litex-openfpga = { path = "../../crates/litex-openfpga" }
vgm-core = { path = "../../../../../firmware/vgm-core" }
midi-core = { path = "../../../../../firmware/midi-core" }

embedded-alloc = "0.5.0"
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"
